app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree
 *= require_self
 */

 a, a:hover, a:active, a:focus {
  color: black;
  font-size: 30px;
  outline: 0;
  text-decoration: none;
}


.album-art {
  width: 40px;
}

#already-played-songs {
  display: none;
  list-style-type: none;
}

body {
  font-family: 'Amatic SC';
  margin: 0px;
}


.content {
  padding: 25px;
  text-align: center;
  width: 320px;
}

.dropdown-song {
  color: white;
  font-size: larger;
}

.dropdown-artist {
  color: #C0C0C0;
}


h1.home {
  font-size: 58px;
  margin: 2px 2px;
  text-align: center;
  margin: 0px;
}


.slide-out-div h1 {
  margin: 0;
  font-size: 40px;
}

.slide-out-div .footer {
  background-color: black;
  clear: both;
  position: fixed; bottom: 0; left: 0;
  width: 28.1%;
}

/*.move {
  background-color: black;
  border-style: none;
  color: white;
  float: right;
  font-family: 'Amatic SC';
  font-size: 30px;
  position: fixed; top: 0; left: 0;
  width: 360px;
}
*/
.slide-out-div .footer a {
  color: white;
}


h2 {
  font-size: 38px;
  margin: 3px 3px;
  text-align: center;
}

.home-content {
  background-color: rgba(174, 167, 167, 0.7);
  padding-bottom: 50px;
  position: fixed; top: 0; left: 0;
  width: 320px;
}

.home-content form {
  width: 200px;
}

.home-content input {
  padding-left: 50px;
  padding-bottom: 10px;
  margin-bottom: 5px;
}

h2 {
  font-size: 30px;
}

#search_room {
  font-size: 36px;
  margin-left: 90px;
  padding-left: 0px;
  text-align: center;
  width: 120px;
}

.move {
  background-color: black;
  border-style: none;
  color: white;
  float: right;
  font-family: 'Amatic SC';
  font-size: 30px;
  position: fixed; top: 0; left: 0;
  width: 360px;
}

.move-div {
  background-color: rgba(174, 167, 167, 0.7);
}

#new-song-prompt {
  font-size: 42px;
}

.playlist-item {
  background-color: grey;
  border: 1px solid black;
  color: white;
  font-size: 50px;
  height: 50px;
  line-height: 50px;
  list-style-type: none;
  margin-bottom: 5px;
  text-align: left;
}

.playlist-item .album-art {
  display: inline;
  font-size: 50px;
  line-height: 50px;
  padding-left: 5px;
}

.playlist-item .song-title {
  display: inline;
  font-size: 25px;
  line-height: 50px;
  padding-left: 5px;
  vertical-align: middle;
}

.playlist-item .vote {
  float: right;
  /*font-family: 'Londrina Shadow';*/
  font-size: 25px;
  height: 50px;
  text-align: center;
  width: 40px;
}

.playlist-item .vote:hover {
  background: black;
  cursor: pointer;
}

#playlist li:first-child {
  height: 70px;
  margin-bottom: 10px;
  position: relative;
}

#playlist li:first-child .album-art {
  width: 60px;
  float: left;
  padding-top: 5px;
}

#playlist li:first-child .song-title {
  display: inline-block;
  float: left;
}

#playlist li:first-child .vote {
  display: none;
}

#progress-bar {
  position: absolute; left: 70px; top: 45px;
}


.slide-out-div {
  background-color: rgba(174, 167, 167, 0.7);
  float: left;
  height: 100%;
  margin-top: 20px;
  max-height: 90%;
  overflow: auto;
  padding: 15px;
  position: fixed; left: 0;
}

#song-title-query {
  margin-bottom: 10px;
  margin-top: 10px;
  font-size: 24px;
}

#tubular-player {
  webkit-filter: grayscale(100%);
}

input:hover {
  outline: none;
}

button:focus {
  outline: none;
}


/* hack-fix to remove placeholder text on click */
input:focus::-webkit-input-placeholder {
  color: transparent;
}

ul {
  padding: 0% 0%;
}

.ui-autocomplete {
/*  back: ;ground-color: rgba(20, 110, 181,0.8);*/
  font-family: Georgia;
  list-style-type: none;
  width: 260px;
  z-index: 100;
}

.ui-menu-item {
  background-color: rgba(20, 110, 181,0.7);
  color: white;
/*  background: white;*/
  font-family: sans-serif;
  font-size: 18px;
  padding: 10px;
  padding-bottom: 5px;

}

.ui-menu-item:hover {
  background-color: black;
}

.ui-helper-hidden-accessible {
  display: none;
}

.ui-menu-item:hover {
  cursor: pointer;
}

#video-controls {
  border: 0px;
  font-size: 24px;
  font-weight: bold;
  margin: 0px;
  margin-bottom: 10px;
  z-index: 150;
}

#video-controls a {
  color: white;
  font-weight: normal;
  text-decoration: none;
}

#video-controls a:hover {
  background: black;
  font-weight: normal;
  text-decoration: none;
}

/*#already-played-songs li {
  vertical-align: middle;
}*/

.mobile-hide {
  display: none;
}

/*chrome needs a media query rule in the CSS as well as JS in order to work, even if the rule is empty (as below)
*/
@media screen and (min-width:450px) {
  .mobile-hide {
    display: inline;
  }
}

@media (max-width: 450px) {

.slide-out-div .footer {
  width: 306px;
}

}

